--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -1,12 +1,28 @@
-<% content_for :title, "Editing course" %>
+<% content_for :title, "Edit Course" %>
 
-<h1>Editing course</h1>
-
-<%= render "form", course: @course %>
-
-<br>
-
-<div>
-  <%= link_to "Show this course", @course %> |
-  <%= link_to "Back to courses", courses_path %>
+<div class="container mt-4">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card">
+        <div class="card-header bg-white">
+          <div class="d-flex justify-content-between align-items-center">
+            <div class="d-flex align-items-center gap-3">
+              <h1 class="h3 mb-0">Edit Course</h1>
+              <% if @course.is_archived %>
+                <span class="badge bg-secondary">Archived</span>
+              <% else %>
+                <span class="badge bg-success">Active</span>
+              <% end %>
+            </div>
+            <%= link_to course_path(@course), class: "btn btn-outline-secondary btn-sm" do %>
+              <i class="bi bi-arrow-left"></i> Back to Course
+            <% end %>
+          </div>
+        </div>
+        <div class="card-body">
+          <%= render "form", course: @course %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
