--- a/app/views/teachers/edit.html.erb
+++ b/app/views/teachers/edit.html.erb
@@ -1,8 +1,31 @@
-<% content_for :title, "Editing teacher" %>
+<% content_for :title, "Edit Teacher" %>
 
-<h1>Editing teacher</h1>
-
-<%= render "form", teacher: @teacher %>
+<div class="container mt-4">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card">
+        <div class="card-header bg-white">
+          <div class="d-flex justify-content-between align-items-center">
+            <div class="d-flex align-items-center gap-3">
+              <h1 class="h3 mb-0">Edit Teacher</h1>
+              <% if @teacher.is_archived %>
+                <span class="badge bg-secondary">Archived</span>
+              <% else %>
+                <span class="badge bg-success">Active</span>
+              <% end %>
+            </div>
+            <%= link_to teacher_path(@teacher), class: "btn btn-outline-secondary btn-sm" do %>
+              <i class="bi bi-arrow-left"></i> Back to Teacher
+            <% end %>
+          </div>
+        </div>
+        <div class="card-body">
+          <%= render "form", teacher: @teacher %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 <br>
 
