--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,10 +1,28 @@
-<% content_for :title, "Edit User" %>
+<% content_for :title, "Edit #{@user.full_name}" %>
 
-<h1>Edit User</h1>
-
-<%= render "form", user: @user %>
-
-<div>
-  <%= link_to "Show this user", @user %> |
-  <%= link_to "Back to users", users_path %>
+<div class="container mt-4">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card">
+        <div class="card-header bg-white">
+          <div class="d-flex justify-content-between align-items-center">
+            <div class="d-flex align-items-center gap-3">
+              <h1 class="h3 mb-0">Edit User</h1>
+              <% if @user.is_archived %>
+                <span class="badge bg-secondary">Archived</span>
+              <% else %>
+                <span class="badge bg-success">Active</span>
+              <% end %>
+            </div>
+            <%= link_to user_path(@user), class: "btn btn-outline-secondary btn-sm" do %>
+              <i class="bi bi-arrow-left"></i> Back to User
+            <% end %>
+          </div>
+        </div>
+        <div class="card-body">
+          <%= render "form", user: @user %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div> 
